# cMCP

./: .clang-tidy  .cppcheck-suppressions  .gitignore  CHANGELOG.md  CLAUDE.md  Doxyfile  LICENSE  Makefile  README.md  SECURITY.md  TODO.md
.github/: CODEOWNERS
bench/: README.md  baseline.json  bench_http.c  bench_server_inline.c  bench_server_pool.c  bench_util.h  compare-baseline.sh  run.sh
conformance/: README.md  claude_code_setup.md  client_vs_cmcp.mjs  client_vs_ts.c  corpus_schema.json  package.json  schema_ajv_crosscheck.mjs  schema_ajv_runner.c
docs/: README.md  SEMVER.md  agentic-readiness.md  architecture.md  case-study-symlink-escape.md  cmcp-engineering-report.tex  cmcp-study-guide.tex  coverage-policy.md  deployment-tls.md  dogfood-cragmcp.md  fuzz-nightly.md  perf-baselines.md  perf-regression-gate.md  schema-audit.md  schema-conformance.md  schema-subset.md  soak-nightly.md  spec-version-upgrade.md  testing-overview.md  threat-model.md  v0.6.0-acceptance.md
examples/: echo-server.c  host-probe.c  minimal-client.c
examples/install-smoke/: CMakeLists.txt  Makefile  run.sh  smoke.c
fuzz/: fuzz_http.c  fuzz_json.c  fuzz_rpc.c  fuzz_schema.c
include/: cmcp.h  cmcp_client.h  cmcp_http_parser.h  cmcp_json.h  cmcp_schema.h  cmcp_server.h  cmcp_session.h  cmcp_transport.h  cmcp_types.h
scripts/: build-report.sh  build-testing-pdf.sh  check-spec-version.sh  coverage-delta.sh  report_figures.py
src/: client.c  http_parser.c  json.c  rpc.c  schema.c  server.c  session.c  transport_http.c  transport_http_client.c  transport_stdio.c  types.c  worker.c  (+1 more)
(+120 files in other folders)
